# LumenRay

./: .clang-format  .gitignore  Cargo.toml  README.md  plotmetrics.py  plotmetrics_live.py  rustfmt.toml
assets/models/: cube.mtl
shaders/: colour.glsl  cpu_render.frag  cpu_render.vert  defines.glsl  fxaa.glsl  gpu_render.comp  intersection.glsl  radiosity.comp  shading.glsl  structs.glsl
src/: lib.rs  main.rs
src/engine/: engine.rs  mod.rs
src/engine/ray_engine/: cpu_ray_engine.rs  mod.rs  ray.rs
src/engine/renderer/: components.rs  cpu_renderer.rs  cpustreaming_renderer.rs  mod.rs  ray.rs
src/engine/scene/: scene.rs
src/engine/vk_backend/: backend.rs
src/renderer/: components.rs  cpu_renderer.rs  gpu_renderer.rs  mesh.rs  mod.rs  ray.rs  texture.rs  utils.rs
src/renderer/shaders/: render.frag  render.vert
src/scene/: components.rs  entity.rs  mod.rs  query.rs  render_scene.rs  scene.rs
src/vk/: backend.rs  buffer.rs  compute_backend.rs  compute_context.rs  descriptor.rs  image_array.rs  mod.rs  output_image.rs  sampler.rs  set.rs  shader.rs  streaming_backend.rs  texture_array.rs
src/vk_backend/: backend.rs  streaming_pipeline.rs
