[package]
name = "lumen_ray"
version = "0.1.0"
authors = ["Josh <jose.josh04@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.17", default-features = false }
image = "0.24.3"
rayon = "1.5.3"
vulkano = "0.30.0"
vulkano-win = "0.30.0"
vulkano-shaders = "0.30.0"
bytemuck = "1.11.0"
winit = "0.26"
hecs = "0.8.2"



[profile.release]
# codegen-units = 1
panic = "abort"
debug = true

